# OpenAI_Agents_SDK

./: Agent_visulization.ipynb  Litellm_Openai_Agents_SDK.ipynb  README.md  Triage_agent.ipynb
First_Agent/: pyproject.toml
First_Agent/src/first_agent/: main.py
second-Agent/second_agent/src/second_agent/: main.py
second_agent/: pyproject.toml
second_agent/src/second_agent/: .env  __init__.py  main.py
