[project]
name = "first-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Minahil Nawaz", email = "minahilnawaz98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    
]

[project.scripts]
first-agent = "first_agent:main"
my_agent = "first_agent.main:sdk_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
