[project]
name = "second-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Minahil Nawaz", email = "minahilnawaz98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.400",
    "openai-agents==0.0.7",
]

[project.scripts]
second-agent = "second_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
